Changes in code for choosing URL as random URL from the list of available end points as well as implemented automatic retry in case of certain type of failures